[metadata]
name = digsec
version = 0.1
url = https://github.com/metebalci/digsec
author = Mete Balci
author_email = metebalci@gmail.com
license = GPLv3
description = dig like command line utility to understand and troubleshoot DNSSEC
long_description = file: README.md
keywords = DNSSEC
classifiers = 
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Information Technology
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Topic :: Internet :: Name Service (DNS)
  Topic :: System :: Networking
  Topic :: System :: Systems Administration
  Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = digsec
install_requires = rsa

[options.entry_points]
console_scripts = digsec=digsec.scripts:main
