[metadata]
name = digsec
version = attr:digsec.DIGSEC_VERSION
url = https://github.com/metebalci/digsec
author = Mete Balci
author_email = metebalci@gmail.com
license = GPLv3
description = dig like command line utility to understand DNSSEC
long_description = file: README.md
long_description_content_type = text/markdown
keywords = DNSSEC
classifiers = 
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Information Technology
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Topic :: Internet :: Name Service (DNS)
  Topic :: System :: Networking
  Topic :: System :: Systems Administration
  Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = digsec
install_requires = 
  rsa==4.9
  ecdsa==0.18.0
  ECPy==1.2.5

[options.entry_points]
console_scripts = digsec=digsec.scripts:main
